--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # Global config.
 title = "Sia"
-baseurl = "https://sia.tech/" # TODO: schemaless?
+baseurl = "https://veritascoin.io/" # TODO: schemaless?
 googleAnalytics = "UA-58715089-4"
 
 # i18n and language specific config.
@@ -19,5 +19,5 @@ DefaultContentLanguage = "en"
     weight = 4
   [Languages.zh-hant]
     weight = 5
-	[Languages.ha]
-		weight = 6
+  [Languages.ha]
+    weight = 6
